# Automated-Figure-extraction-and-Tagging

./: .gitignore  LICENSE  README.md  build_package.sh  build_pex.sh  data.txt  data4.txt  dev_env.sh  mesh_out.txt  setup.cfg  setup.py  tox.ini
models/: kmeans_model.256d.8.pt
notebooks/: Workbench variational-autoencoder-conv.ipynb
requirements/: base.in  base.txt  local.in  local.txt  test.in  test.txt
samples/: ImageIndex.sqlite
src/figtag/: _Model.py  classifier.py  figure_search.py  imgsplitter.py  indexer.py  manage.py  meshindexer.py  openiparser.py  run.py
src/figtag/apps/: classifier.py  figure_search.py  imgsplitter.py  indexer.py  meshindexer.py  openiparser.py  run.py
src/figtag/utils/: _filesystem.py
