[metadata]
name = figtag
maintainer = NCBI
maintainer-email = nobody@ncbi.nlm.nih.gov
home-page = https://github.com/NCBI-Codeathons/Automated-Figure-extraction-and-Tagging
requires-python >= 3.6

[files]
packages_root = src
extra_files =
    tests/*.py
scripts = bin/*.py
          bin/figtag

[entry_points]
console_scripts =
    figtag = figtag.manage:main

[bdist_wheel]
# Only a python3 package
python-tag = py3

[auto-version]
type = git-pep440
